# schedapi

./: .gitignore  Cargo.toml  README.md  config.toml  ru.html  ru_dev.html  schema.cql
assets/css/: main.css
data/: migration_c04ceec_06d5dbf.cql  schedule.csv  schema.cql
src/: api.rs  data.rs  db.rs  init.rs  main.rs  models.rs  serialization.rs
src/api/: docs.rs  epoch.rs  fun.rs  groups.rs  product.rs  schedule.rs  users.rs
src/api/dogfood/: schedule.rs
src/data/: config.rs  even_odd.rs  group.rs  group_create_request.rs  group_without_schedule.rs  internal.rs  portable_schedule_entry.rs  queries.rs  range.rs  requests.rs  responses.rs  schedule.rs  schedule_entry.rs  schedule_request.rs  shared_state.rs  user.rs  user_composite.rs  user_create_response.rs
src/data/requests/: epoch_request.rs  epoch_update_request.rs  generic_access_token_request.rs  group_create_request.rs  group_delete_request.rs  schedule_request.rs  user_change_password_request.rs  user_token_request.rs
src/data/responses/: epoch_response.rs  user_token_response.rs
src/models/: config.rs  dogfood.rs  group.rs  portable_schedule_entry.rs  schedule.rs  schedule_request.rs  shared_state.rs  user.rs
src/models/dogfood/: import_request.rs  schedule_request.rs  schedule_row.rs
