[package]
name = "schedapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
csv = "1.3.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "fs"] }
toml = "0.8.8"
utoipa = "4.2.0"
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
