[package]
name = "schedapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["multipart"], default-features = false }
csv = { version = "1.3.0", default-features = false }
openssl = { version = "0.10.62", default-features = false }
rand = { version = "0.8.5", default-features = false }
scylla = { version = "0.11.1", features = ["ssl"], default-features = false }
serde = { version = "1.0.195", features = ["derive"], default-features = false }
serde_json = { version = "1.0.111", default-features = false }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "fs"], default-features = false }
toml = { version = "0.8.8", features = ["parse"], default-features = false}
tower-http = { version = "0.5.1", features = ["cors"], default-features = false }
utoipa = { version = "4.2.0", default-features = false }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"], default-features = false }
uuid = { version = "1.6.1", default-features = false }
